[package]
name = "bully-chaos-mod"
version = "1.0.0"
edition = "2024"

[dependencies]
windows = { version = "=0.62.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
env_logger = "=0.11.10"
log = "=0.4.29"
tokio = { version = "=1.51.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
twitch-irc = "=5.0.1"
rand = "=0.10.0"
strum = "=0.28.0"
strum_macros = "=0.28.0"
toml = "=1.1.2"
serde = { version = "=1.0.228", features = ["derive"] }
